# inderes-cli

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.ps1  install.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  e2e.yml  release.yml  smoke-install.yml  upstream-drift.yml
src/: auth.rs  cache.rs  commands.rs  forum.rs  main.rs  mcp.rs  oauth.rs  skill.rs  storage.rs  upgrade.rs
src/skill/: SKILL.md  hermes.md  openclaw.md  ptrclaw.md
tests/: cli.rs
tests/e2e/: README.md  run-local.sh
tests/e2e/hermes/: validate.py
tests/e2e/openclaw/: package.json  validate.mts
tests/e2e/ptrclaw/: build.sh  validate.cpp
tests/fixtures/: upstream-tools.txt
